--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-      <h1>Hello World we are software developers!</h1>
     <!--
 
     Hello Camper!
@@ -23,5 +22,8 @@
 
     -->
     <script  src="js/index.js"></script>
+    <div id="main">
+      <div id="title"><h1>Dr. Norman Borlaug</h1></div>
+    </div>
   </body>
 </html>
