--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <script  src="js/index.js"></script>
     <div id="main">
       <div id="title"><h1>Dr. Norman Borlaug</h1></div>
+      <div id="img-div">
+        <img src="img/tribute.jpg">
+      </div>
     </div>
   </body>
 </html>
